final fixes before stretch goals

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -135,7 +135,7 @@ table {
 
 html,
 body {
-  /* height: 100%; */
+  height: 100%;
   font-family: "Titillium Web", sans-serif;
 }
 
@@ -255,9 +255,16 @@ h1 {
 /* footer style goes here */
 footer {
   margin-left: 9.9%;
-  margin-top: 2%;
+  margin-top: 10px;
 }
 
-.state {
-  margin-top: 2%;
+.phone {
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+.copy {
+  margin-top: 1%;
+  margin-left: 35%;
+  margin-bottom: 8%;
 }
